--- a/src/accounts/static/css/accounts/style.css
+++ b/src/accounts/static/css/accounts/style.css
@@ -5,9 +5,9 @@ html {
     font-size: 16px;
 }
 :root {
-    --textColor: #474747;
+    --textColor: #201e1e;
     --errorColor: #D86346;
-    --accentColor: #5D6B83;
+    --accentColor: #409e8a;
     --white: #fff;
 }
 *, body {
@@ -18,11 +18,18 @@ html {
     font-family: 'Open Sans', sans-serif;
     color: var(--textColor);
 }
+body {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    margin-top: 100px;
+}
 main {
     padding: 0px 10px;
     max-width: 900px;
-    margin: auto;
-    margin-top: 80px;
+    min-width: 400px;
+    /* margin: auto; */
+    /* margin-top: 80px; */
 }
 
 /* general ---------------- */
