--- a/src/orders/templates/orders/order_create.html
+++ b/src/orders/templates/orders/order_create.html
@@ -1,11 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Gestion des commandes</title>
-    </head>
-    <body>
-        <h2>Create commandes</h2>
-    </body>
-</html>
+{% extends 'qstockapp/base.html' %}
+{% load static %}
+
+<!-- head  -->
+{% block head %}
+    <title>Gestion des commandes</title>
+    <link rel="stylesheet" href="{% static 'css/quickstockapp/form.css' %}">
+{% endblock %}
+
+<!-- extra styles  -->
+{% block extra_styles %} 
+ 
+{% endblock %}
+
+<!-- body content -->
+{% block body %}
+<h3>Ajouter une commande</h3>
+<form method="POST">
+    {% csrf_token %} 
+    <div class="form-content">
+        {{ form }}
+    </div>
+    <button type="submit">Enrégistrer</button>
+    <a class="link" href="{% url 'orders:order_list' %}">Annuler</a>
+</form>
+{% endblock %}
+
