--- a/src/orders/templates/orders/order_list.html
+++ b/src/orders/templates/orders/order_list.html
@@ -1,33 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Gestion des commandes</title>
-    </head>
-    <body>
-        <h2>Commandes</h2>
-        <table style="border-collapse: collapse; text-align: left">
-            <thead>
-                <tr>
-                    {% for column in order_column_names %}
-                    <th style="border: 1px solid; padding: 5px">
-                        {{ column }}
-                    </th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for order in order_list %}
-                <tr>
-                    {% for column in order %}
-                    <td style="border: 1px solid; padding: 5px">
-                        {{ column }}
-                    </td>
-                    {% endfor %}
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </body>
-</html>
+{% extends 'qstockapp/base.html' %}
+{% load static %}
+
+<!-- head  -->
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/quickstockapp/table.css' %}">
+<title>Gestion des commandes</title>
+
+{% endblock %}
+
+<!-- extra styles  -->
+{% block extra_styles %} 
+   
+{% endblock %}
+
+<!-- body content -->
+{% block body %}
+<div class="heading">
+    <h2>Commandes</h2>
+<a class="btn primary" href="{% url 'orders:order_create' %}">+ Ajouter une commande</a
+>
+</div>
+
+{% if order_list %}
+<table>
+    <thead>
+        <tr>
+            <th>#</th>
+            {% for column in order_column_names %}
+            <th>{{ column }}</th>
+            {% endfor %}
+        </tr>
+    </thead>
+    <tbody>
+        {% for order in order_list %}
+        <tr>
+            <td>{{ order.pk }}</td>
+            <td>{{ order.order_date }}</td>
+            <td class="{{ order.status_class_name }}">{{ order.status_display }}</td>
+            <td>{{ order.product }}</td>
+            <td>{{ order.quantity }}</td>
+            <td>
+                {% if order.arrived_date != None %} {{ order.arrived_date }} {% else %} - {% endif %}
+            </td>
+            <td>{{ order.provider_name }}</td>
+            <td>{{ order.shipping_costs }}</td>
+            <td class="actions">
+                <a href="{% url 'orders:order_details' pk=order.pk %}">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M11.32 6.17504H5C3.895 6.17504 3 7.12404 3 8.29304V18.881C3 20.051 3.895 20.999 5 20.999H16C17.105 20.999 18 20.051 18 18.881V11.131L14.086 15.275C13.7442 15.6405 13.2991 15.8931 12.81 15.999L10.129 16.567C8.379 16.937 6.837 15.304 7.187 13.452L7.723 10.613C7.82 10.101 8.058 9.63004 8.407 9.26104L11.32 6.17504Z" fill="black"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M19.846 4.31704C19.746 4.0605 19.5977 3.82557 19.409 3.62504C19.2242 3.42846 19.0018 3.27101 18.755 3.16204C18.5117 3.05518 18.2488 3 17.983 3C17.7172 3 17.4543 3.05518 17.211 3.16204C16.9642 3.27101 16.7418 3.42846 16.557 3.62504L16.011 4.20304L18.863 7.22304L19.409 6.64404C19.5978 6.44364 19.7462 6.20867 19.846 5.95204C20.0516 5.42643 20.0516 4.84265 19.846 4.31704ZM17.45 8.72004L14.597 5.69904L9.82 10.759C9.74952 10.8341 9.70199 10.9278 9.683 11.029L9.147 13.869C9.077 14.239 9.386 14.565 9.735 14.491L12.417 13.924C12.5148 13.9028 12.6037 13.8522 12.672 13.779L17.45 8.72004Z" fill="black"/>
+                    </svg>
+                </a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% else %}
+<p>Aucune commande</p>
+{% endif %}
+<script>
+    document
+        .querySelector(".delete_action")
+        .addEventListener("click", (e) => {
+            e.preventDefault();
+            if (confirm("Etes-vous sure de supprimer ?")) {
+                const form = e.target.closest("form");
+                form.submit();
+            }
+        });
+</script>
+{% endblock %}
+
