--- a/src/products/templates/products/product_create.html
+++ b/src/products/templates/products/product_create.html
@@ -1,25 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Gestion des produits</title>
+{% extends 'qstockapp/base.html' %}
+{% load static %}
 
-        <style>
-            form {
-                display: flex;
-                flex-direction: column;
-                gap: 20px;
-                align-items: flex-start;
-            }
-        </style>
-    </head>
-    <body>
-        <h2>Ajoutez un produit</h2>
-        <form method="POST">
-            {% csrf_token %} {{ form }}
-            <button type="submit">Enrégistrer</button>
-            <a href="{% url 'products:product_list' %}">Annuler</a>
-        </form>
-    </body>
-</html>
+<!-- head  -->
+{% block head %}
+    <title>Gestion des produits</title>
+    <link rel="stylesheet" href="{% static 'css/quickstockapp/form.css' %}">
+{% endblock %}
+
+<!-- extra styles  -->
+{% block extra_styles %} 
+
+{% endblock %}
+
+<!-- body content -->
+{% block body %}
+<h3>Ajoutez un produit</h3>
+<form method="POST">
+    {% csrf_token %} 
+    <div class="form-content">
+        {{ form }}
+    </div>
+    <button type="submit">Enrégistrer</button>
+    <a class="link" href="{% url 'products:product_list' %}">Annuler</a>
+</form>
+{% endblock %}
+
