--- a/src/base_staticfiles/css/qstockapp/base.css
+++ b/src/base_staticfiles/css/qstockapp/base.css
@@ -3,6 +3,7 @@ main {
     display: flex;
     height: 100vh;
     overflow: hidden;
+    padding-bottom: 2rem;
 }
 h3 {
     margin-bottom: 2rem;
@@ -71,6 +72,7 @@ h3 {
 .sidebar {
     background-color: var(--black);
     height:  100vh;
+    padding-right: 2rem;
 }
 .sidebar * {
     color: var(--white);
@@ -95,18 +97,19 @@ h3 {
 header {
     padding: 10px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     width: 100%;
     /* background-color: var(--gray); */
 }
-header div {
+header > div {
     display: flex;
     justify-content: flex-end;
     gap: 20px;
+    align-items: center;
 }
 .heading {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     border-bottom: 1px solid var(--gray);
     margin-bottom: 1.5rem;
@@ -115,4 +118,40 @@ header div {
 .status.validated {
     color: var(--accent);
 }
-
+.current-store {
+    border: 1px solid var(--primary);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 45px; */
+}
+.current-store .current {
+    min-width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.current-store span {
+    display: inline-block;
+    font-weight: 600;
+    color: var(--primary);
+    font-size: 1.1rem;
+    text-align: center;
+    padding: 10px 10px;
+    width: 100%;
+}
+.current-store span:last-child {
+    flex-shrink: 2;
+    max-width: 50px;
+}
+.current-store a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding: 0 10px; */
+    cursor: pointer;
+}
+.current-store .edit svg path {
+    fill: var(--primary);
+}
