--- a/src/quickstockapp/static/css/quickstockapp/table.css
+++ b/src/quickstockapp/static/css/quickstockapp/table.css
@@ -1,10 +1,15 @@
 table {
-    border-collapse: collapse;
+    /* border-collapse: collapse; */
+    width: 100%;
 }
 td,th {
     padding: 10px;
     text-align: left;
     white-space: nowrap;
+    /* max-width: 300px; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 220px;
 }
 td {
     font-size: 1.12rem;
