--- a/src/stores/templates/stores/store_create.html
+++ b/src/stores/templates/stores/store_create.html
@@ -20,6 +20,9 @@
                 {{ form }}
             </div>
             <button type="submit">Enrégistrer</button>
+            <span>
+                <a href="{% url 'stores:store_list' %}">Retour aux magasins</a>
+            </span>
         </form>
     </main>
 </body>
