--- a/src/quickstockapp/templates/quickstockapp/dashboard.html
+++ b/src/quickstockapp/templates/quickstockapp/dashboard.html
@@ -4,10 +4,24 @@
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/quickstockapp/table.css' %}">
 <link rel="stylesheet" href="{% static 'css/quickstockapp/dashbord.css' %}">
+<script src="{% static 'js/quickstockapp/period_change.js' %}" defer></script>
 <title>Tableau de bord</title>
 {% endblock %}
 
 {% block body %}
+<div class="period">
+    <div class="period_form">
+        <span>Période :</span>
+        <form action="/dashbord/" method="GET">
+            <select name="period" id="period">
+                {% for period in month_list %}
+                    <option value="{{ period.month }}-{{ period.year }}">{{ period.month|stringformat:'02d'  }}/{{ period.year }}</option>
+                {% endfor %}
+            </select>
+            <input type="submit" id="submit_period" style="display: none;">
+        </form>
+    </div>
+</div>
 <div class="stats">
     <div>
         <p class="label">
@@ -31,7 +45,15 @@
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M17.6043 10.5166C17.6969 10.3496 17.7456 10.1618 17.7456 9.97079C17.7456 9.7798 17.6969 9.59196 17.6043 9.42496C17.4939 9.24213 17.3391 9.0902 17.1543 8.98329L15.2543 8.04996L17.1709 7.06662C17.353 6.97383 17.5058 6.83251 17.6126 6.65829C17.7209 6.47996 17.7793 6.27496 17.7793 6.06662C17.7793 5.85996 17.7209 5.65829 17.6126 5.48329C17.5048 5.3018 17.3452 5.15669 17.1543 5.06662L10.4876 1.79996C10.3349 1.72367 10.1666 1.68396 9.99594 1.68396C9.82527 1.68396 9.65695 1.72367 9.50428 1.79996L2.83761 5.07496C2.65241 5.1702 2.4968 5.31429 2.38761 5.49162C2.27914 5.66686 2.22168 5.86887 2.22168 6.07496C2.22168 6.28105 2.27914 6.48305 2.38761 6.65829C2.49094 6.83662 2.64428 6.98162 2.82928 7.07496L4.72928 8.04996L2.82928 8.95829C2.64639 9.05372 2.49352 9.19794 2.38761 9.37496C2.27914 9.55019 2.22168 9.7522 2.22168 9.95829C2.22168 10.1644 2.27914 10.3664 2.38761 10.5416C2.49094 10.72 2.64428 10.865 2.82928 10.9583L4.72928 11.9333L2.82928 12.8416C2.64639 12.9371 2.49352 13.0813 2.38761 13.2583C2.27914 13.4335 2.22168 13.6355 2.22168 13.8416C2.22168 14.0477 2.27914 14.2497 2.38761 14.425C2.49344 14.6016 2.64594 14.7458 2.82928 14.8416L9.49594 18.175C9.65511 18.2666 9.83594 18.3158 10.0209 18.3166C10.1993 18.3191 10.3751 18.273 10.5293 18.1833L17.2459 14.775C17.4911 14.6229 17.6685 14.3824 17.7414 14.1032C17.8143 13.824 17.7771 13.5275 17.6376 13.275C17.5272 13.0922 17.3724 12.9403 17.1876 12.8333L15.2793 11.9L17.2459 10.8916C17.3924 10.7955 17.5149 10.6673 17.6043 10.5166ZM9.98761 13.2333L6.43761 11.425L6.27928 11.35L3.59594 9.96662L6.09594 8.75829L9.42928 10.4833C9.58928 10.5725 9.77094 10.6183 9.95428 10.6166C10.1319 10.6221 10.3077 10.5788 10.4626 10.4916L13.7959 8.76662L16.2959 9.97496L9.98761 13.2333Z" fill="#3393B1"/>
             </svg>
-            Produits en stock</p>
+            Stock actuel combiné</p>
+        <p>{{ total_stock }}</p>
+    </div>
+    <div>
+        <p class="label">
+            <svg width="20" height="20" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.74604 37.7031H15.895L13.762 48.2971C13.7155 48.5444 13.692 48.7955 13.692 49.0471C13.692 50.1951 14.488 50.8281 15.59 50.8281C16.715 50.8281 17.535 50.2181 17.77 49.0701L20.066 37.7031H31.152L29.02 48.2971C28.95 48.5311 28.927 48.8131 28.927 49.0471C28.927 50.1951 29.724 50.8281 30.849 50.8281C31.974 50.8281 32.794 50.2181 33.029 49.0701L35.3 37.7031H43.667C44.956 37.7031 45.847 36.7661 45.847 35.5001C45.847 34.4691 45.144 33.6251 44.089 33.6251H36.143L38.63 21.2501H46.833C48.123 21.2501 49.013 20.3131 49.013 19.0471C49.013 18.0161 48.31 17.1721 47.255 17.1721H39.45L41.372 7.72712C41.395 7.58612 41.442 7.28112 41.442 6.97712C41.442 5.82812 40.622 5.17212 39.497 5.17212C38.185 5.17212 37.599 5.89812 37.364 7.00012L35.302 17.1721H24.215L26.137 7.72712C26.16 7.58612 26.207 7.28112 26.207 6.97712C26.207 5.82812 25.363 5.17212 24.262 5.17212C22.926 5.17212 22.316 5.89812 22.105 7.00012L20.043 17.1721H12.356C11.066 17.1721 10.176 18.1561 10.176 19.4451C10.176 20.5001 10.879 21.2501 11.934 21.2501H19.223L16.738 33.6251H9.16804C7.87804 33.6251 6.98804 34.6091 6.98804 35.8981C6.98804 36.9531 7.69104 37.7031 8.74604 37.7031ZM20.886 33.6251L23.395 21.2501H34.48L31.972 33.6251H20.886Z" fill="#9F48E3"/>
+            </svg>
+            Nombre de produits</p>
         <p>{{ products_count }}</p>
     </div>
 </div>
@@ -49,8 +71,8 @@
             <tbody>
                 {% for product in best_products %}
                 <tr>
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.sale_set.all.count }}</td>
+                    <td>{{ product.product.name }}</td>
+                    <td>{{ product.count }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -78,6 +100,9 @@
                 {% endfor %}
             </tbody>
         </table>
+        <p>
+            <a href="{% url 'products:product_list' %}">Afficher tout</a>
+        </p>
         {% else %}
         <p>Aucun produit à afficher </p>
         {% endif %}
