--- a/src/stores/templates/stores/store_update.html
+++ b/src/stores/templates/stores/store_update.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{% static 'css/quickstockapp/form.css' %}">
     <link rel="stylesheet" href="{% static 'css/stores/form.css' %}">
 
+    <script src="{% static 'js/stores/theme_color.js' %}" defer></script>
+    
     <title>Modifier un magasin</title>
 </head>
 <body>
