--- a/src/stores/static/css/stores/store_list.css
+++ b/src/stores/static/css/stores/store_list.css
@@ -1,6 +1,6 @@
 main {
     margin: 2rem auto;
-    max-width: 1000px;
+    max-width: 500px;
     padding: 0 1rem;
 }
 h2 {
@@ -32,9 +32,9 @@ h2 {
 
 } */
 .stores {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 .store {
     border: 1px solid var(--gray);
@@ -94,7 +94,7 @@ h2 {
     text-decoration: none;
 }
 .btn {
-    padding: 5px 10px;
+    padding: 3px 10px;
     border: 1px solid var(--gray);
     background-color: var(--subwhite);
     border-radius: 5px;
