--- a/src/stores/templates/stores/store_list.html
+++ b/src/stores/templates/stores/store_list.html
@@ -19,31 +19,33 @@
                 </div>
             </div>
         </div>
-
-
         <div class="stores">
-            {% for store in store_list %}
-            <div class="store" style="background-color: {{ store.accent_color_code }};">
-                <div class="content">
-                    <p class="name">{{ store.name }}</p>
-                    <p>{{ store.address }}</p>
-                    <a href="{% url 'stores:change_store' pk=store.pk %}"></a>
-                </div>
-                <div class="options">
-                    <a href="{% url 'stores:store_update' pk=store.pk %}">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path id="edit_ico" d="M3 21V16.75L16.2 3.575C16.4 3.39167 16.621 3.25 16.863 3.15C17.105 3.05 17.359 3 17.625 3C17.891 3 18.1493 3.05 18.4 3.15C18.6507 3.25 18.8673 3.4 19.05 3.6L20.425 5C20.625 5.18333 20.771 5.4 20.863 5.65C20.955 5.9 21.0007 6.15 21 6.4C21 6.66667 20.9543 6.921 20.863 7.163C20.7717 7.405 20.6257 7.62567 20.425 7.825L7.25 21H3ZM17.6 7.8L19 6.4L17.6 5L16.2 6.4L17.6 7.8Z" fill="black"/>
-                        </svg>
-                    </a>
-                    <a style="color: var(--error);" href="{% url 'stores:store_delete' pk=store.pk %}">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path id="delete_ico" d="M7 21C6.45 21 5.97933 20.8043 5.588 20.413C5.19667 20.0217 5.00067 19.5507 5 19V6H4V4H9V3H15V4H20V6H19V19C19 19.55 18.8043 20.021 18.413 20.413C18.0217 20.805 17.5507 21.0007 17 21H7ZM9 17H11V8H9V17ZM13 17H15V8H13V17Z" fill="black"/>
-                        </svg>
-                    </a>
-                </div>
-            </div>
+            {% for category in store_categories %}
+                {% if category.store_list %}
+                <div class="category">{{ category.category_name }}</div>
+                {% for store in category.store_list %}
+                    <div class="store" style="background-color: {{ store.accent_color_code }};">
+                        <div class="content">
+                            <p class="name">{{ store.name }}</p>
+                            <p>{{ store.address }}</p>
+                            <a href="{% url 'stores:change_store' pk=store.pk %}"></a>
+                        </div>
+                        <div class="options">
+                            <a href="{% url 'stores:store_update' pk=store.pk %}">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path id="edit_ico" d="M3 21V16.75L16.2 3.575C16.4 3.39167 16.621 3.25 16.863 3.15C17.105 3.05 17.359 3 17.625 3C17.891 3 18.1493 3.05 18.4 3.15C18.6507 3.25 18.8673 3.4 19.05 3.6L20.425 5C20.625 5.18333 20.771 5.4 20.863 5.65C20.955 5.9 21.0007 6.15 21 6.4C21 6.66667 20.9543 6.921 20.863 7.163C20.7717 7.405 20.6257 7.62567 20.425 7.825L7.25 21H3ZM17.6 7.8L19 6.4L17.6 5L16.2 6.4L17.6 7.8Z" fill="black"/>
+                                </svg>
+                            </a>
+                            <a style="color: var(--error);" href="{% url 'stores:store_delete' pk=store.pk %}">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path id="delete_ico" d="M7 21C6.45 21 5.97933 20.8043 5.588 20.413C5.19667 20.0217 5.00067 19.5507 5 19V6H4V4H9V3H15V4H20V6H19V19C19 19.55 18.8043 20.021 18.413 20.413C18.0217 20.805 17.5507 21.0007 17 21H7ZM9 17H11V8H9V17ZM13 17H15V8H13V17Z" fill="black"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                {% endfor %}
+                {% endif %}
             {% endfor %}
-            
         </div>
     </main>
 
